fixed overflow

--- a/src/components/CurrentWinner.module.css
+++ b/src/components/CurrentWinner.module.css
@@ -17,4 +17,9 @@
 .winner {
   cursor: pointer;
   user-select: text;
+  display: inline-block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
